unpackaged/main/default/objects/AccountContactRelation/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK('/' &amp;ContactId, Contact.FirstName &amp; ' ' &amp; Contact.LastName, "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>