unpackaged/main/default/objects/AccountContactRelation/fields/Over_Hours_Alert__c.field-meta.xml
<CustomField>
    <fullName>Over_Hours_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over Hours Alert</label>
    <type>Checkbox</type>
</CustomField>