unpackaged/main/default/objects/AccountContactRelation/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>IF(INCLUDES(Roles, "Invoices Sent"), "Invoices Sent; ", "") &amp;
IF(INCLUDES(Roles, "Reports Sent"), "Reports Sent; ", "") &amp;
IF(INCLUDES(Roles, "Hours Usage Warnings"), "Hours Usage Warnings", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>