unpackaged/main/default/objects/AccountContactRelation/fields/Role_s__c.field-meta.xml
<CustomField>
    <fullName>Role_s__c</fullName>
    <formula>IF(INCLUDES(Roles, "Current Employee"), "Current Employee;",
IF(INCLUDES(Roles, "Previous Employee"), "Previous Employee;",
IF(INCLUDES(Roles, "Client"), "Client;",
IF(INCLUDES(Roles, "Other"), "Other;" , ""))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role(s)</label>
    <type>Text</type>
</CustomField>