unpackaged/main/default/objects/AccountContactRelation/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>